# scidavis

./: CMakeLists.txt
fitPlugins/: CMakeLists.txt
libscidavis/: CMakeLists.txt  libscidavis.pro
libscidavis/src/: ApplicationWindow.cpp  ApplicationWindow.h  Folder.cpp  Folder.h  importOPJ.cpp
scidavis/: CMakeLists.txt  basic.pri
test/: test.pro
